# trading-research-mvp

./: .env.example  .gitignore  AI_Trading_Desk_Architecture_v7.docx  CLAUDE.md  README.md  check_alpaca_config.py  check_ctrader_accounts.py  check_ctrader_config.py  check_ctrader_symbols.py  check_ctrader_trendbars.py  config.py  config.yaml  crewai_studio_context.md  ctrader_auth.py  ctrader_client.py  dashboard.html  generate_lock.sh  graph.py  llm_direct.py  main.py  market_data.py  observability.py  opportunity.py  perplexity_search.py  pyproject.toml  ranking.py  report.py  requirements.txt  research.py  risk_filter.py  scanner.py  schemas.py  slack_notify.py  storage.py  test_crew1_mistral.py  test_crewai_mistral.py
agents/: __init__.py  llm_factory.py
crews/: __init__.py  execution_monitor.py  post_trade_review.py  research_synthesizer.py  setup_validation.py  trade_plan.py
src/: crew.py
src/config/: agents.yaml  crew.py  tasks.yaml
src/trading_research/: __init__.py  crew.py  flow.py
src/trading_research/config/: agents.yaml  tasks.yaml
src/trading_research_mvp/: __init__.py  crew.py  main.py
src/trading_research_mvp/config/: agents.yaml  tasks.yaml
