[project]
name = "trading-research-mvp"
version = "0.1.0"
description = "Autonomous trading research pipeline — no order execution, no real money."
authors = [{ name = "Paulo Couto", email = "paulo35couto@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "crewai[tools]>=1.0.0,<2.0.0",
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
    "litellm>=1.40,<2",
    "requests>=2.31,<3",
]

[project.scripts]
crew = "src.crew:run"
flow = "src.trading_research_mvp.flow:run"
trading-research-mvp = "src.trading_research_mvp.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_research_mvp"]

[tool.crewai]
type = "flow"
